<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_32dp">

    <TextView
        android:id="@+id/textViewItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_description" />

    <TextView
        android:id="@+id/textViewItemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity" />

    <Button
        android:id="@+id/buttonIncreaseQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/increase_quantity" />

    <Button
        android:id="@+id/buttonDecreaseQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/decrease_quantity" />

    <Button
        android:id="@+id/buttonRemoveItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_item" />

</LinearLayout>