<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="100dp">


    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/item_name"
        android:inputType="text"
        android:minHeight="48dp"
        />

    <EditText
        android:id="@+id/editTextItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/item_description"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/quantity"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonSaveItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>