<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large"
    tools:context=".SMSPermissionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/sms_permission"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewPermissionExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/this_app_needs_permission_to_send_sms_messages_for_inventory_notifications" />

    <Button
        android:id="@+id/buttonGrantPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/grant_permission" />

    <Button
        android:id="@+id/buttonDenyPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deny_permission" />

</LinearLayout>